--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -30,3 +30,34 @@
     color: var(--gray-400);
     line-height: 1.6;
 }
+
+.sidebar footer {
+    border-top: 1px solid var(--gray-600);
+    margin-top: 1.5rem;
+    padding: 1.5rem 2rem 2rem;
+}
+
+.sidebar footer a {
+    background: transparent;
+    color: var(--red-500);
+    border: 1px solid var(--red-500);
+    border-radius: 8px;
+    height: 50px;
+    padding: 0 1.5rem;
+    font-weight: bold;
+    display: block;
+    text-decoration: none;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.5rem;
+
+    transition: color 0.1s, background 0.1s;
+}
+
+.sidebar footer a:hover {
+    background: var(--red-500);
+    color: var(--white);
+}
