Adicionado icone de favorito

--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -19,7 +19,7 @@ Style every post that has a post before it
 
 .content {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 1rem;
 }
 
@@ -50,4 +50,30 @@ Style every post that has a post before it
 
 .contentInfo button:hover {
     background: var(--green-300);
+}
+
+.contentInfo header a {
+    background: transparent;
+    color: var(--green-500);
+    border: 1px solid var(--green-500);
+    border-radius: 8px;
+    height: 28px;
+    width: 28px;
+    display: block;
+    text-decoration: none;
+    
+    margin-bottom: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.5rem;
+
+    transition: color 0.1s, background 0.1s;
+}
+
+.contentInfo header a:hover {
+    background: var(--green-500);
+    color: var(--white);
 }
