--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -37,6 +37,31 @@
     padding: 1.5rem 2rem 2rem;
 }
 
+.sidebar a {
+    background: transparent;
+    color: var(--green-500);
+    border: 1px solid var(--green-500);
+    border-radius: 8px;
+    height: 50px;
+    padding: 0 1.5rem;
+    font-weight: bold;
+    display: block;
+    text-decoration: none;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.5rem;
+
+    transition: color 0.1s, background 0.1s;
+}
+
+.sidebar a:hover {
+    background: var(--green-500);
+    color: var(--white);
+}
+
 .sidebar footer a {
     background: transparent;
     color: var(--red-500);
