--- a/src/components/MovieDetailed.module.css
+++ b/src/components/MovieDetailed.module.css
@@ -26,3 +26,31 @@
         grid-template-columns: 1fr;
     }
 }
+
+.content {
+    background: var(--gray-800);
+    border-radius: 8px;
+    padding: 2.5rem;
+    margin-top: 1rem;
+}
+
+.commentContainer {
+    background: var(--gray-900);
+    border-radius: 8px;
+    padding: 2.5rem;
+    margin-top: 1rem;
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.commentContainer span {
+    background: var(--gray-800);
+    border-radius: 8px;
+
+    padding: 1rem;
+    display: block;
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
+}
