--- a/src/components/MovieDetailed.module.css
+++ b/src/components/MovieDetailed.module.css
@@ -54,3 +54,52 @@
     color: var(--gray-400);
     line-height: 1.6;
 }
+
+.commentForm {
+    background: var(--gray-800);
+    width: 100%;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    padding: 1.5rem;
+    border-top: 1px solid var(--gray-600);
+    border-radius: 8px;
+}
+
+.commentForm > strong {
+    line-height: 1.6;
+    color: var(--gray-100);
+}
+
+.commentForm textarea {
+    background: var(--gray-900);
+    width: 100%;
+    border: 0;
+    resize: none;
+    height: 6rem;
+    padding: 1rem;
+    border-radius: 8px;
+    color: var(--gray-100);
+    line-height: 1.4;
+    margin-top: 1rem;
+}
+
+.commentForm button[type=submit] {
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
+    border-radius: 8px;
+    border: 0;
+    background: var(--green-500);
+    color: var(--white);
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.1s;
+}
+
+.commentForm button[type=submit]:not(:disabled):hover {
+    background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
